--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" type="text/css" href="static/style.css"/>
 <html>
     <head>
-        <title>Save the date!</title>
+        <title>Guide to a Wedding from the Cenozoic Era</title>
     </head>
     <body>
         <div class="banner banner-first">
