--- a/html/rsvp.html
+++ b/html/rsvp.html
@@ -2,14 +2,9 @@
 <link rel="stylesheet" type="text/css" href="static/style.css"/>
 <html>
     <head>
-        <title>Save the date!</title>
+        <title>RSVP</title>
     </head>
     <body>
-        <div float="left">
-
-            <div width="640" height="800">
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScri4bB1lzuWlQnP2BY17snWbkHaqfpUk1EN5_dHhxQC5qkUg/viewform?embedded=true" width="100%" height="1500px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-            </div>
-        </div>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScri4bB1lzuWlQnP2BY17snWbkHaqfpUk1EN5_dHhxQC5qkUg/viewform?embedded=true" width="100%" height="2000px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </body>
 </html>
