new fonts and updated text after talking to Ben

--- a/html/index.html
+++ b/html/index.html
@@ -8,8 +8,10 @@
         <div class="banner banner-first">
         <div class="banner-inside">
             <p class="names" >Darian Weber & Laurent Bergeron</p>
-            <p class="title">would like to invite you to our wedding at Hudson's Hope, BC on July 30th, 2022.</p>
-            <p class="title"><a class="link" href="rsvp.html">Click here to RVSP :)</a></p>
+            <p class="title">would like to invite you to our wedding on July 30th, 2022,</p>
+            <p class="title">at The Pearkes Event Centre, 10801 Dudley Dr, Hudson's Hope, BC.</p>
+            <p class="title">Whether you are planning to come or not, please let us know <a class="link" href="rsvp.html">here</a>.</p>
+            
         </div>
         </div>
 
@@ -19,8 +21,9 @@
             <hr>
             <div id="list">
             <ol>
-                <li><p>Free camping located right on the venue. There is a field in front of the Pearkes Event Centre where you can set up a tent or park an RV for the weekend. There are washrooms available to use inside (showers?? / RV plugin??)</p></li>
-                <li><p>Hotel - Stillwater Inn and Suites. This is about 2 km from the Event Centre. Please phone <a class="phone" href="tel:25078354000">(250) 783-5400</a> to make a booking. Ask for the rooms booked under Darian for the July 30 weekend/wedding. Please make all bookings by April 30, 2022. </p></li>
+                <li><p>Free camping located right on the venue. There is a field in front of the Pearkes Event Centre where you can set up a tent or park an RV for the weekend. There are washrooms inside but no showers.</p></li>
+                <li><p>Camping at <a class="phone" href="https://hudsonshope.ca/adventure/campgrounds/king-gething/">King Gething's Campground</a> just across the field. This one has showers and RV plugin. 4 minute walk to the venue. Online campground reservations can be made starting on May 3rd.</p></li>
+                <li><p>Hotel at <a class="phone" href="https://www.stillwaterinnandsuites.com/stillwaterinnandsuites">Stillwater Inn and Suites</a>, located about 2 km from the venue. Please phone <a class="phone" href="tel:25078354000">(250) 783-5400</a> to make a booking. Ask for the rooms booked under Darian for the July 30 weekend/wedding. Please make all bookings by May 30, 2022. 25-30 minute walk to venue; 5 minute drive.</p></li>
             </ol>
             </div>
         </div>
@@ -30,30 +33,33 @@
         <div class="banner-inside">
             <h1>Schedule</h1>
             <hr>
+            <p>
+                Unless specified otherwise, all events are taking place at the Pearkes Event Centre.
+            </p>
             <h2>Friday night  July 29th</h2>
             <div id="list">
             <ol>
-                <li style="list-style-type: '19:00';"><p>(Optional) Set up and games casual evening. Appetizers provided for the evening for those wishing to attend. </p></li>
+                <li style="list-style-type: '19:00';"><p>(Optional) Wine, cheese and board games. Bring some of your own!</p></li>
             </ol>
             </div>
             <h2>Saturday - July 30th</h2>
             <div id="list">
             <ol>
-                <li style="list-style-type: '16:00';"><p>Wedding ceremony at the Pearkes Event Centre</p></li>
-                <li style="list-style-type: '16:30';"><p>Appies and dinner, catered by the Rustic Market Garden </p></li>
+                <li style="list-style-type: '16:00';"><p>Wedding ceremony</p></li>
+                <li style="list-style-type: '16:30';"><p>Appies and dinner, catered by the Rustic Market Garden</p></li>
                 <li style="list-style-type: '20:00';"><p>Dance and campfire</p></li>
             </ol>
             </div>
             <h2>Sunday - July 31th</h2>
             <div id="list">
             <ol>
-                <li style="list-style-type: '9:00';"><p>BBQ breakfast and clean up until 12:00</p></li>
-                <li style="list-style-type: '13:00';"><p>(Optional) Drive to dinosaur tracks in the backcountry for those who have the time. (approximate drive is ~1 hour). Back in Hudson's Hope around 17:00. </p></li>
+                <li style="list-style-type: '9:00';"><p>Brunch and clean up until 12:00</p></li>
+                <li style="list-style-type: '12:00';"><p>(Optional) Drive to dinosaur tracks in the backcountry for those who have the time. Drive is approximately 1 hour. Back in Hudson's Hope around 16:00. </p></li>
             </ol>
             </div>
         </div>
         </div>
-
+<!-- 
         <div class="banner banner-not-first">
         <div class="banner-inside">
             <h1>Menu</h1>
@@ -61,13 +67,13 @@
             <div id="list">
             <ol>
                 <li><p>Friday night: Wine and cheese appetizers, for those joining the casual games night/set up.  </p></li>
-                <li><p>Saturday: Afternoon appetizers</p></li>
+                <li><p>Saturday: Dinner catered by the</p></li>
                 <li><p>Supper: Tacos and salad</p></li>
-                <li><p>Sunday: Morning BBQ brunch</p></li>
+                <li><p>Sunday: Brunch</p></li>
             </ol>
             </div>
         </div>
-        </div>
+        </div> -->
 
         <div class="banner banner-not-first">
         <div class="banner-inside">
@@ -88,4 +94,11 @@
         </div>
         </div>
     </body>
+
+    <div class="banner banner-last">
+    <div class="banner-inside">
+        <p class="title">While we're looking forward to see you, we understand that some might not be comfortable or able to travel this summer.</p>
+        <p class="title">Whether you are planning to come or not, please let us know <a class="link" href="rsvp.html">here</a>.</p>
+    </div>
+    </div>
 </html>
