--- a/html/index.html
+++ b/html/index.html
@@ -34,7 +34,7 @@
             <h1>Schedule</h1>
             <hr>
             <p>
-                Unless specified otherwise, all events are taking place at the Pearkes Event Centre.
+                Unless specified otherwise, all events are taking place at the Pearkes Event Centre. Schedule subject to change.
             </p>
             <h2>Friday night  July 29th</h2>
             <div id="list">
@@ -45,6 +45,7 @@
             <h2>Saturday - July 30th</h2>
             <div id="list">
             <ol>
+                <li style="list-style-type: '13:00';"><p>Lawn games, again feel free to bring some of your own!</p></li>
                 <li style="list-style-type: '16:00';"><p>Wedding ceremony</p></li>
                 <li style="list-style-type: '16:30';"><p>Appies and dinner, catered by the Rustic Market Garden</p></li>
                 <li style="list-style-type: '20:00';"><p>Dance and campfire</p></li>
