--- a/html/index.html
+++ b/html/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <link rel="stylesheet" type="text/css" href="static/style.css"/>
-<html>
+<html lang="en">
     <head>
         <title>Guide to a Wedding from the Cenozoic Era</title>
     </head>
     <body>
         <div class="banner banner-first">
-        <div class="banner-inside">
+            <div class="banner-inside">
+            <a class="link" href="index.html">EN</a> | <a class="link" href="index-fr.html" style="text-decoration: none;">FR</a>
             <p class="names" >Darian Weber & Laurent Bergeron</p>
             <p class="title">would like to invite you to our wedding on July 30th, 2022,</p>
             <p class="title">at The Pearkes Event Centre, 10801 Dudley Dr, Hudson's Hope, BC.</p>
             <p class="title">Whether you are planning to come or not, please let us know <a class="link" href="rsvp.html">here</a>.</p>
-            
         </div>
         </div>
 
@@ -35,8 +35,10 @@
             <hr>
             <p>
                 Unless specified otherwise, all events are taking place at the Pearkes Event Centre. Schedule subject to change.
+                There are no specific rules regarding wear - we recommend dressing semi-formally for Saturday and every day clothes for the rest.
+                Know that we will try to spend as much time outside as possible, but that we also have access to a big indoor room, should weather deteriorate.
             </p>
-            <h2>Friday night  July 29th</h2>
+            <h2>Friday night - July 29th</h2>
             <div id="list">
             <ol>
                 <li style="list-style-type: '19:00';"><p>(Optional) Wine, cheese and board games. Bring some of your own!</p></li>
@@ -44,7 +46,7 @@
             </div>
             <h2>Saturday - July 30th</h2>
             <div id="list">
-            <ol>
+            <ol>        
                 <li style="list-style-type: '13:00';"><p>Lawn games, again feel free to bring some of your own!</p></li>
                 <li style="list-style-type: '16:00';"><p>Wedding ceremony</p></li>
                 <li style="list-style-type: '16:30';"><p>Appies and dinner, catered by the Rustic Market Garden</p></li>
@@ -60,28 +62,13 @@
             </div>
         </div>
         </div>
-<!-- 
-        <div class="banner banner-not-first">
-        <div class="banner-inside">
-            <h1>Menu</h1>
-            <hr>
-            <div id="list">
-            <ol>
-                <li><p>Friday night: Wine and cheese appetizers, for those joining the casual games night/set up.  </p></li>
-                <li><p>Saturday: Dinner catered by the</p></li>
-                <li><p>Supper: Tacos and salad</p></li>
-                <li><p>Sunday: Brunch</p></li>
-            </ol>
-            </div>
-        </div>
-        </div> -->
 
         <div class="banner banner-not-first">
         <div class="banner-inside">
             <h1>Registry</h1>
             <hr>
             <p>
-                There is no gift that will bring us more joy than sharing great moments with you during our wedding weekend. For those who insist in giving a present, we would be immensely grateful if you could help us towards our next goal to purchase a home to hold all our future memories. 
+                There is no gift that will bring us more joy than sharing great moments with you during our wedding weekend. For those who insist in giving a present, please consider helping us towards our next goal to purchase a home to hold all our future memories. 
             </p>
         </div>
         </div>
