--- a/html/rsvp-fr.html
+++ b/html/rsvp-fr.html
@@ -6,7 +6,7 @@
     </head>
     <div class="banner banner-first">
         <div class="banner-inside">
-            <a class="link" href="index.html">Back to home</a>
+            <a class="link" href="index-fr.html">Retour</a>
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScri4bB1lzuWlQnP2BY17snWbkHaqfpUk1EN5_dHhxQC5qkUg/viewform?embedded=true" width="100%" height="2000px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
     </div>
