--- a/html/index-fr.html
+++ b/html/index-fr.html
@@ -50,10 +50,10 @@
             <h2>Samedi - 30 juillet</h2>
             <div id="list">
             <ol>        
-                <li style="list-style-type: '13h00';"><p>Jeux &agrave; l'ext&eacute;rieur, encore un fois vous pouvez apportez votre propre collection!</p></li>
-                <li style="list-style-type: '15h00';"><p>S&eacute;ance photos.</p></li>
+                <li style="list-style-type: '10h00';"><p> Pr&eacute;parations pour la journ&eacute;e, allez et venez &agrave; votre guise. Jeux d'ext&eacute;rieur et grignotines seront pr&eacute;sents, encore un fois vous pouvez apportez votre propre collection de jeux!</p></li>
+                <li style="list-style-type: '15h30';"><p>S&eacute;ance photos.</p></li>
                 <li style="list-style-type: '16h00';"><p>C&eacute;r&eacute;monie.</p></li>
-                <li style="list-style-type: '16h30';"><p>Entr&eacute;es et souper, pr&eacute;par&eacute; par le Rustic Market Garden.</p></li>
+                <li style="list-style-type: '16h30';"><p>Entr&eacute;es et souper, pr&eacute;par&eacute; et servi par le Rustic Market Garden.</p></li>
                 <li style="list-style-type: '20h00';"><p>Dance et feu de camp.</p></li>
             </ol>
             </div>
