--- a/html/index.html
+++ b/html/index.html
@@ -47,7 +47,8 @@
             <h2>Saturday - July 30th</h2>
             <div id="list">
             <ol>        
-                <li style="list-style-type: '13:00';"><p>Lawn games, again feel free to bring some of your own!</p></li>
+                <li style="list-style-type: '10:00';"><p>Casual preparations, come hang out at the venue at your convenience. There will be lawn games and snacks, again feel free to bring some games of your own!</p></li>
+                <li style="list-style-type: '15:30';"><p>Photos</p></li>
                 <li style="list-style-type: '16:00';"><p>Wedding ceremony</p></li>
                 <li style="list-style-type: '16:30';"><p>Appies and dinner, catered by the Rustic Market Garden</p></li>
                 <li style="list-style-type: '20:00';"><p>Dance and campfire</p></li>
