--- a/html/index.html
+++ b/html/index.html
@@ -2,9 +2,11 @@
 <link rel="stylesheet" type="text/css" href="static/style.css"/>
 <html lang="en">
     <head>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script type="text/javascript" src="static/script.js"></script>
         <title>Guide to a Wedding from the Cenozoic Era</title>
     </head>
-    <body>
+    <body class="img4">
         <div class="banner banner-first">
             <div class="banner-inside">
             <a class="link" href="index.html">EN</a> | <a class="link" href="index-fr.html" style="text-decoration: none;">FR</a>
