improve dynamic background

--- a/html/rsvp-fr.html
+++ b/html/rsvp-fr.html
@@ -4,11 +4,12 @@
     <head>
         <title>RSVP</title>
     </head>
-    <div class="banner banner-first">
-        <div class="banner-inside">
-            <a class="link" href="index-fr.html">Retour</a>
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScri4bB1lzuWlQnP2BY17snWbkHaqfpUk1EN5_dHhxQC5qkUg/viewform?embedded=true" width="100%" height="2000px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    <body class="img4">
+        <div class="banner banner-last">
+            <div class="banner-inside">
+                <a class="link" href="index-fr.html">Retour</a>
+            </div>
         </div>
-    </div>
-
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScri4bB1lzuWlQnP2BY17snWbkHaqfpUk1EN5_dHhxQC5qkUg/viewform?embedded=true" width="100%" height="2000px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    </body>
 </html>
