test for faster image load

--- a/html/index.html
+++ b/html/index.html
@@ -92,4 +92,8 @@
         <p class="title">Whether you are planning to come or not, please let us know <a class="link" href="rsvp.html">here</a>.</p>
     </div>
     </div>
+    
+    <div style="width:1px; height:1px; visibility:hidden; overflow:hidden">
+        <img src="static/images/img2.jpg" /><img src="static/images/img3.jpg" /><img src="static/images/img4.jpg" />
+    </div>
 </html>
