--- a/html/index-fr.html
+++ b/html/index-fr.html
@@ -96,4 +96,8 @@
         <p class="title">Si vous planifier vous joindre &agrave; nous, ou si vous serez absent, s.v.p. faites nous parvenir votre r&eacute;ponse en cliquant <a class="link" href="rsvp-fr.html">ici</a>.</p>
     </div>
     </div>
+    
+    <div style="width:1px; height:1px; visibility:hidden; overflow:hidden">
+        <img src="static/images/img2.jpg" /><img src="static/images/img3.jpg" /><img src="static/images/img4.jpg" />
+    </div>
 </html>
