erreurs de francais

--- a/html/index-fr.html
+++ b/html/index-fr.html
@@ -4,16 +4,16 @@
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script type="text/javascript" src="static/script.js"></script>
-        <title>Guide to a Wedding from the Cenozoic Era</title>
+        <title>Guide to pour un mariage du C&eacute;nozo&iuml;que</title>
     </head>
     <body class="img1">
         <div class="banner banner-first">
         <div class="banner-inside">
             <a class="link" href="index.html">EN</a> | <a class="link" href="index-fr.html">FR</a>
             <p class="names" >Darian Weber & Laurent Bergeron</p>
-            <p class="title">vous invitons &agrave; notre marrige le 30 juillet, 2022,</p>
+            <p class="title">vous invitons &agrave; notre mariage le 30 juillet, 2022,</p>
             <p class="title">au Pearkes Event Centre, 10801 Dudley Dr, Hudson's Hope, BC.</p>
-            <p class="title">Si vous planifier vous joindre &agrave; nous, ou si vous serez absent, s.v.p. faites nous parvenir votre r&eacute;ponse en cliquant <a class="link" href="rsvp-fr.html">ici</a>.</p>
+            <p class="title">Si vous planifiez vous joindre &agrave; nous, ou si vous serez absents, s.v.p. faites nous parvenir votre r&eacute;ponse en cliquant <a class="link" href="rsvp-fr.html">ici</a>.</p>
         </div>
         </div>
 
@@ -23,11 +23,11 @@
             <hr>
             <div id="list">
             <ol>
-                <li><p>Camping gratuit situ&eacute; sur place. Il y a un champ au Pearkes Event Centre o&ugrave; vous pourrez installer votre tente ou VR pour la fin de semaine. Des toilettes sont disponibles, mais pas de douches. </p></li>
-                <li><p>Camping au <a class="phone" href="https://hudsonshope.ca/adventure/campgrounds/king-gething/">King Gething's Campground</a> juste en face. Ce camping donne acc&egrave;s &agrave; des douches. Situ&eacute; &agrave; 4 minutes de marche. Il est possible de r&eacute;server en ligne &agrave; partir du 3 mai.</p></li>
+                <li><p>Camping gratuit au Pearkes Event Centre o&ugrave; vous pouvez installer votre tente ou VR pour la fin de semaine. Il y a des toilettes sur place, mais pas de douches. </p></li>
+                <li><p>Camping au <a class="phone" href="https://hudsonshope.ca/adventure/campgrounds/king-gething/">King Gething's Campground</a> juste en face. Douches sur place. Situ&eacute; &agrave; 4 minutes de marche. Il est possible de r&eacute;server en ligne &agrave; partir du 3 mai.</p></li>
                 <li><p>
                     H&ocirc;tel au <a class="phone" href="https://www.stillwaterinnandsuites.com/stillwaterinnandsuites">Stillwater Inn and Suites</a>, situ&eacute; &agrave; environ 2 km du Pearkes Event Centre (30 minutes de marche, 5 minutes en voiture). 
-                    R&eacute;servez en appelant le <a class="phone" href="tel:25078354000">(250) 783-5400</a>, et demandez pour les chambres r&eacute;serv&eacute;es par Darian pour le marriage du 30 juillet.
+                    R&eacute;servez en appelant le <a class="phone" href="tel:25078354000">(250) 783-5400</a>, et demandez pour les chambres r&eacute;serv&eacute;es au nom de Darian pour le mariage du 30 juillet.
                     S.v.p. r&eacute;servez avant le 30 mai. </p></li>
             </ol>
             </div>
@@ -36,12 +36,12 @@
 
         <div class="banner banner-not-first">
         <div class="banner-inside">
-            <h1>Calendrier</h1>
+            <h1>Programme</h1>
             <hr>
             <p>
                 Sauf indication contraire, tous les &eacute;v&eacute;nenements auront lieu au Pearkes Event Centre. L'horaire est sujet &agrave; changement.
-                En ce qui a trait &aacute; l'habillement, il n'y a Aucune consigne sp&eacute;cifique - nous recommandons une tenue semi-formelle samedi et v&ecirc;tements de tous les jours pour le reste.
-                Sachez que nous allons tenter de passer le plus de temps possible &agrave; l'&eacute;terieur, mais que nous aurons aussi acc&egrave;s &agrave; une grande salle int&eacute;rieur si la m&eacute;t&eacute;o ne coop&egrave;re pas.
+                En ce qui a trait &agrave; l'habillement, nous recommandons une tenue semi-formelle samedi et v&ecirc;tements de tous les jours pour le reste.
+                Sachez que nous allons tenter de passer le plus de temps possible &agrave; l'ext&eacute;rieur, et que nous aurons aussi acc&egrave;s &agrave; une grande salle int&eacute;rieure si la m&eacute;t&eacute;o ne coop&egrave;re pas.
             </p>
             <h2>Vendredi soir - 29 juillet</h2>
             <div id="list">
@@ -52,18 +52,18 @@
             <h2>Samedi - 30 juillet</h2>
             <div id="list">
             <ol>        
-                <li style="list-style-type: '10h00';"><p> Pr&eacute;parations pour la journ&eacute;e, allez et venez &agrave; votre guise. Jeux d'ext&eacute;rieur et grignotines seront pr&eacute;sents, encore un fois vous pouvez apportez votre propre collection de jeux!</p></li>
+                <li style="list-style-type: '10h00';"><p> Pr&eacute;parations pour la journ&eacute;e, allez et venez &agrave; votre guise. Jeux d'ext&eacute;rieur et grignotines seront pr&eacute;sents, encore une fois vous pouvez ajouter vos propres jeux aux n&ocirc;tres!</p></li>
                 <li style="list-style-type: '15h30';"><p>S&eacute;ance photos.</p></li>
                 <li style="list-style-type: '16h00';"><p>C&eacute;r&eacute;monie.</p></li>
                 <li style="list-style-type: '16h30';"><p>Entr&eacute;es et souper, pr&eacute;par&eacute; et servi par le Rustic Market Garden.</p></li>
-                <li style="list-style-type: '20h00';"><p>Dance et feu de camp.</p></li>
+                <li style="list-style-type: '20h00';"><p>Danse et feu de camp.</p></li>
             </ol>
             </div>
             <h2>Dimanche - 31 juillet</h2>
             <div id="list">
             <ol>
                 <li style="list-style-type: '9h00';"><p>Brunch jusqu'&agrave; 12h00.</p></li>
-                <li style="list-style-type: '12h00';"><p>(Facultatif) Excursion pour voir des traces de dinosaures (situ&eacute; &agrave; 1h de route). De retour &agrave; Hudson's Hope pour 16h00.</p></li>
+                <li style="list-style-type: '12h00';"><p>(Facultatif) Excursion pour voir des empreintes de dinosaures (situ&eacute; &agrave; 1h de route). De retour &agrave; Hudson's Hope pour 16h00.</p></li>
             </ol>
             </div>
         </div>
@@ -71,11 +71,11 @@
 
         <div class="banner banner-not-first">
         <div class="banner-inside">
-            <h1>Pr&eacute;sents de marriage</h1>
+            <h1>Pr&eacute;sents de mariage</h1>
             <hr>
             <p>
-                Le plus beau cadeau que vous puissiez nous offrir est votre pr&eacute;sence avec nous pendant cette fin de semaine. 
-                Pour ceux qui insistent de vouloir poursuivre la tradition de nous offrir un pr&eacute;sent, nous vous serons reconnaissant pour toute aide qui nous permettra de r&eacute;aliser notre prochain objectif d'acheter une maison.
+                Le plus beau cadeau que vous puissiez nous donner est votre pr&eacute;sence avec nous pendant cette fin de semaine.
+                Pour ceux qui insistent &agrave; vouloir nous offrir un pr&eacute;sent, nous vous serons reconnaissants pour toute aide qui nous permettra de r&eacute;aliser notre prochain objectif d'acheter une maison.
             </p>
         </div>
         </div>
@@ -92,8 +92,8 @@
 
     <div class="banner banner-last">
     <div class="banner-inside">
-        <p class="title">Malgr&eacute; que nous soyions impatients de vous voir, nous comprenons que certains de serons pas capables ou confortables de voyager cet &eacute;t&eacute;.</p>
-        <p class="title">Si vous planifier vous joindre &agrave; nous, ou si vous serez absent, s.v.p. faites nous parvenir votre r&eacute;ponse en cliquant <a class="link" href="rsvp-fr.html">ici</a>.</p>
+        <p class="title">Malgr&eacute; que nous soyons impatients de vous voir, nous comprenons que certains ne seront pas capables ou confortables de voyager cet &eacute;t&eacute;.</p>
+        <p class="title">Si vous planifiez vous joindre &agrave; nous, ou si vous serez absents, s.v.p. faites nous parvenir votre r&eacute;ponse en cliquant <a class="link" href="rsvp-fr.html">ici</a>.</p>
     </div>
     </div>
     
