quelques ajouts au programme

--- a/html/index-fr.html
+++ b/html/index-fr.html
@@ -46,7 +46,7 @@
             <h2>Vendredi soir - 29 juillet</h2>
             <div id="list">
             <ol>
-                <li style="list-style-type: '19h00';"><p>(Facultatif) Soir&eacute;es jeux de soci&eacute;t&eacute;, vins et fromages. Apportez quelques-uns de vos jeux!</p></li>
+                <li style="list-style-type: '19h00';"><p>(Facultatif) Soir&eacute;es jeux de soci&eacute;t&eacute;, vins et fromages (et autres). Apportez quelques-uns de vos jeux!</p></li>
             </ol>
             </div>
             <h2>Samedi - 30 juillet</h2>
@@ -57,6 +57,7 @@
                 <li style="list-style-type: '16h00';"><p>C&eacute;r&eacute;monie.</p></li>
                 <li style="list-style-type: '16h30';"><p>Entr&eacute;es et souper, pr&eacute;par&eacute; et servi par le Rustic Market Garden.</p></li>
                 <li style="list-style-type: '20h00';"><p>Danse et feu de camp.</p></li>
+                <li style="list-style-type: '23h59';"><p>Souper de minuit!</p></li>
             </ol>
             </div>
             <h2>Dimanche - 31 juillet</h2>
