--- a/html/index.html
+++ b/html/index.html
@@ -43,7 +43,7 @@
             <h2>Friday night - July 29th</h2>
             <div id="list">
             <ol>
-                <li style="list-style-type: '19:00';"><p>(Optional) Wine, cheese and board games. Bring some of your own!</p></li>
+                <li style="list-style-type: '19:00';"><p>(Optional) Wine, cheese, appies and board games. Bring some of your own!</p></li>
             </ol>
             </div>
             <h2>Saturday - July 30th</h2>
@@ -54,6 +54,7 @@
                 <li style="list-style-type: '16:00';"><p>Wedding ceremony</p></li>
                 <li style="list-style-type: '16:30';"><p>Appies and dinner, catered by the Rustic Market Garden</p></li>
                 <li style="list-style-type: '20:00';"><p>Dance and campfire</p></li>
+                <li style="list-style-type: '23:59';"><p>Midnight lunch!</p></li>
             </ol>
             </div>
             <h2>Sunday - July 31th</h2>
