fautes de francais corrigees par papa et maman

--- a/html/index-fr.html
+++ b/html/index-fr.html
@@ -9,11 +9,12 @@
     <body class="img1">
         <div class="banner banner-first">
         <div class="banner-inside">
-            <a class="link" href="index.html">EN</a> | <a class="link" href="index-fr.html">FR</a>
+            <a class="link" href="index.html" style="text-decoration: none;">EN</a> | <a class="link" href="index-fr.html">FR</a>
             <p class="names" >Darian Weber & Laurent Bergeron</p>
-            <p class="title">vous invitons &agrave; notre mariage le 30 juillet, 2022,</p>
+            <p class="title">vous invitent &agrave; leur mariage le 30 juillet 2022,</p>
             <p class="title">au Pearkes Event Centre, 10801 Dudley Dr, Hudson's Hope, BC.</p>
-            <p class="title">Si vous planifiez vous joindre &agrave; nous, ou si vous serez absents, s.v.p. faites nous parvenir votre r&eacute;ponse en cliquant <a class="link" href="rsvp-fr.html">ici</a>.</p>
+            <p class="title">Que vous soyez pr&eacute;sent ou absent, veuillez confirmer votre r&eacute;ponse en cliquant <a class="link" href="rsvp-fr.html">ici</a>.</p>
+            <p class="title">Voir ci-dessous pour plus d'informations sur l'h&eacute;bergement et les activit&eacute;s.</p>
         </div>
         </div>
 
@@ -46,16 +47,16 @@
             <h2>Vendredi soir - 29 juillet</h2>
             <div id="list">
             <ol>
-                <li style="list-style-type: '19h00';"><p>(Facultatif) Soir&eacute;es jeux de soci&eacute;t&eacute;, vins et fromages (et autres). Apportez quelques-uns de vos jeux!</p></li>
+                <li style="list-style-type: '19h00';"><p>(Facultatif) Soir&eacute;es jeux de soci&eacute;t&eacute;, vins, fromages, et grignotines offerts. Apportez quelques-uns de vos jeux!</p></li>
             </ol>
             </div>
             <h2>Samedi - 30 juillet</h2>
             <div id="list">
             <ol>        
-                <li style="list-style-type: '10h00';"><p> Pr&eacute;parations pour la journ&eacute;e, allez et venez &agrave; votre guise. Jeux d'ext&eacute;rieur et grignotines seront pr&eacute;sents, encore une fois vous pouvez ajouter vos propres jeux aux n&ocirc;tres!</p></li>
+                <li style="list-style-type: '10h00';"><p>Pr&eacute;parations pour la journ&eacute;e, allez et venez &agrave; votre guise. Jeux ext&eacute;rieur sur place, encore une fois vous pouvez ajouter vos propres jeux aux n&ocirc;tres!</p></li>
                 <li style="list-style-type: '15h30';"><p>S&eacute;ance photos.</p></li>
                 <li style="list-style-type: '16h00';"><p>C&eacute;r&eacute;monie.</p></li>
-                <li style="list-style-type: '16h30';"><p>Entr&eacute;es et souper, pr&eacute;par&eacute; et servi par le Rustic Market Garden.</p></li>
+                <li style="list-style-type: '16h30';"><p>Ap&eacute;ro et souper, pr&eacute;par&eacute;s et servis par le Rustic Market Garden.</p></li>
                 <li style="list-style-type: '20h00';"><p>Danse et feu de camp.</p></li>
                 <li style="list-style-type: '23h59';"><p>Souper de minuit!</p></li>
             </ol>
@@ -75,8 +76,8 @@
             <h1>Pr&eacute;sents de mariage</h1>
             <hr>
             <p>
-                Le plus beau cadeau que vous puissiez nous donner est votre pr&eacute;sence avec nous pendant cette fin de semaine.
-                Pour ceux qui insistent &agrave; vouloir nous offrir un pr&eacute;sent, nous vous serons reconnaissants pour toute aide qui nous permettra de r&eacute;aliser notre prochain objectif d'acheter une maison.
+                Le plus beau cadeau que vous puissiez nous offrir est votre pr&eacute;sence parmi nous pendant cette fin de semaine.
+                Pour les personnes qui souhaitent tout de m&ecirc;me nous offrir un pr&eacute;sent, toute aide qui nous permettra de r&eacute;aliser notre prochain objectif d'acheter une maison serait grandement appr&eacute;ci&eacute;e.
             </p>
         </div>
         </div>
@@ -93,8 +94,8 @@
 
     <div class="banner banner-last">
     <div class="banner-inside">
-        <p class="title">Malgr&eacute; que nous soyons impatients de vous voir, nous comprenons que certains ne seront pas capables ou confortables de voyager cet &eacute;t&eacute;.</p>
-        <p class="title">Si vous planifiez vous joindre &agrave; nous, ou si vous serez absents, s.v.p. faites nous parvenir votre r&eacute;ponse en cliquant <a class="link" href="rsvp-fr.html">ici</a>.</p>
+        <p class="title">Malgr&eacute; que nous soyons impatients de vous voir, nous comprenons que certains parmi vous ne seront &agrave; l'aise de voyager cet &eacute;t&eacute;.</p>
+        <p class="title">Que vous soyez pr&eacute;sent ou absent, veuillez confirmer votre r&eacute;ponse en cliquant <a class="link" href="rsvp-fr.html">ici</a>.</p>
     </div>
     </div>
     
