--- a/html/index.html
+++ b/html/index.html
@@ -11,9 +11,10 @@
         <div class="banner-inside">
             <a class="link" href="index.html">EN</a> | <a class="link" href="index-fr.html" style="text-decoration: none;">FR</a>
             <p class="names" >Darian Weber & Laurent Bergeron</p>
-            <p class="title">would like to invite you to our wedding on July 30th, 2022,</p>
+            <p class="title">would like to invite you to their wedding on July 30th, 2022,</p>
             <p class="title">at The Pearkes Event Centre, 10801 Dudley Dr, Hudson's Hope, BC.</p>
             <p class="title">Whether you are planning to come or not, please let us know <a class="link" href="rsvp.html">here</a>.</p>
+            <p class="title">See below for additional informations on lodging and schedule.</p>
         </div>
         </div>
 
