fix for apple devices

--- a/html/index.html
+++ b/html/index.html
@@ -6,11 +6,13 @@
         <script type="text/javascript" src="static/script.js"></script>
         <title>Guide to a Wedding from the Cenozoic Era</title>
     </head>
-    <body class="img1">
+    <body>
+        <div style="width:100%; height:100%; background-size:cover; position: fixed; z-index:-1;" class="background img1"></div>
+
         <div class="banner banner-first">
         <div class="banner-inside">
             <a class="link" href="index.html">EN</a> | <a class="link" href="index-fr.html" style="text-decoration: none;">FR</a>
-            <p class="names" >Darian Weber & Laurent Bergeron</p>
+            <p class="names">Darian Weber & Laurent Bergeron</p>
             <p class="title">would like to invite you to their wedding on July 30th, 2022,</p>
             <p class="title">at The Pearkes Event Centre, 10801 Dudley Dr, Hudson's Hope, BC.</p>
             <p class="title">Whether you are planning to come or not, please let us know <a class="link" href="rsvp.html">here</a>.</p>
@@ -86,16 +88,16 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8918.325429480674!2d-121.9222221!3d56.0259223!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x538d8adedc490747%3A0xd0788bb091a02526!2sThe%20Pearkes%20Arts%20%26%20Events%20Centre!5e0!3m2!1sen!2sca!4v1635725077202!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         </div>
-    </body>
 
-    <div class="banner banner-last">
-    <div class="banner-inside">
-        <p class="title">While we're looking forward to see you, we understand that some might not be comfortable or able to travel this summer.</p>
-        <p class="title">Whether you are planning to come or not, please let us know <a class="link" href="rsvp.html">here</a>.</p>
-    </div>
-    </div>
-    
-    <div style="width:1px; height:1px; visibility:hidden; overflow:hidden">
-        <img src="static/images/img2.jpg" /><img src="static/images/img3.jpg" /><img src="static/images/img4.jpg" />
-    </div>
+        <div style="width:1px; height:1px; visibility:hidden; overflow:hidden">
+            <img src="static/images/img2.jpg" /><img src="static/images/img3.jpg" /><img src="static/images/img4.jpg" />
+        </div>
+
+        <div class="banner banner-last">
+        <div class="banner-inside">
+            <p class="title">While we're looking forward to see you, we understand that some might not be comfortable or able to travel this summer.</p>
+            <p class="title">Whether you are planning to come or not, please let us know <a class="link" href="rsvp.html">here</a>.</p>
+        </div>
+        </div>
+    </body>
 </html>
