--- a/html/rsvp.html
+++ b/html/rsvp.html
@@ -4,7 +4,7 @@
     <head>
         <title>RSVP</title>
     </head>
-    <body class="img4">
+    <body class="background img4">
         <div class="banner banner-last">
             <div class="banner-inside">
                 <a class="link" href="index.html">Back to home</a>
