--- a/html/index-fr.html
+++ b/html/index-fr.html
@@ -7,10 +7,12 @@
         <title>Guide to pour un mariage du C&eacute;nozo&iuml;que</title>
     </head>
     <body class="img1">
+        <div style="width:100%; height:100%; background-size:cover; position: fixed; z-index:-1;" class="background img1"></div>
+
         <div class="banner banner-first">
         <div class="banner-inside">
             <a class="link" href="index.html" style="text-decoration: none;">EN</a> | <a class="link" href="index-fr.html">FR</a>
-            <p class="names" >Darian Weber & Laurent Bergeron</p>
+            <p class="names">Darian Weber & Laurent Bergeron</p>
             <p class="title">vous invitent &agrave; leur mariage le 30 juillet 2022,</p>
             <p class="title">au Pearkes Event Centre, 10801 Dudley Dr, Hudson's Hope, BC.</p>
             <p class="title">Que vous soyez pr&eacute;sent ou absent, veuillez confirmer votre r&eacute;ponse en cliquant <a class="link" href="rsvp-fr.html">ici</a>.</p>
@@ -47,7 +49,7 @@
             <h2>Vendredi soir - 29 juillet</h2>
             <div id="list">
             <ol>
-                <li style="list-style-type: '19h00';"><p>(Facultatif) Soir&eacute;es jeux de soci&eacute;t&eacute;, vins, fromages, et grignotines offerts. Apportez quelques-uns de vos jeux!</p></li>
+                <li style="list-style-type: '19h00';"><p>(Facultatif) Soir&eacute;es jeux de soci&eacute;t&eacute;, vins, fromages et grignotines offerts. Apportez quelques-uns de vos jeux!</p></li>
             </ol>
             </div>
             <h2>Samedi - 30 juillet</h2>
@@ -84,22 +86,22 @@
 
         <div class="banner banner-not-first">
         <div class="banner-inside">
-            <h1>Directions</h1>
+            <h1>Comment s'y rendre</h1>
             <hr>
             <br/>
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8918.325429480674!2d-121.9222221!3d56.0259223!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x538d8adedc490747%3A0xd0788bb091a02526!2sThe%20Pearkes%20Arts%20%26%20Events%20Centre!5e0!3m2!1sen!2sca!4v1635725077202!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         </div>
-    </body>
 
-    <div class="banner banner-last">
-    <div class="banner-inside">
-        <p class="title">Malgr&eacute; que nous soyons impatients de vous voir, nous comprenons que certains parmi vous ne seront &agrave; l'aise de voyager cet &eacute;t&eacute;.</p>
-        <p class="title">Que vous soyez pr&eacute;sent ou absent, veuillez confirmer votre r&eacute;ponse en cliquant <a class="link" href="rsvp-fr.html">ici</a>.</p>
-    </div>
-    </div>
-    
-    <div style="width:1px; height:1px; visibility:hidden; overflow:hidden">
-        <img src="static/images/img2.jpg" /><img src="static/images/img3.jpg" /><img src="static/images/img4.jpg" />
-    </div>
+        <div style="width:1px; height:1px; visibility:hidden; overflow:hidden">
+            <img src="static/images/img2.jpg" /><img src="static/images/img3.jpg" /><img src="static/images/img4.jpg" />
+        </div>
+
+        <div class="banner banner-last">
+        <div class="banner-inside">
+            <p class="title">Malgr&eacute; que nous soyons impatients de vous voir, nous comprenons que certains parmi vous ne seront &agrave; l'aise de voyager cet &eacute;t&eacute;.</p>
+            <p class="title">Que vous soyez pr&eacute;sent ou absent, veuillez confirmer votre r&eacute;ponse en cliquant <a class="link" href="rsvp-fr.html">ici</a>.</p>
+        </div>
+        </div>
+    </body>
 </html>
