--- a/html/index-fr.html
+++ b/html/index-fr.html
@@ -4,7 +4,7 @@
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script type="text/javascript" src="static/script.js"></script>
-        <title>Guide to pour un mariage du C&eacute;nozo&iuml;que</title>
+        <title>Guide pour un mariage du C&eacute;nozo&iuml;que</title>
     </head>
     <body class="img1">
         <div style="width:100%; height:100%; background-size:cover; position: fixed; z-index:-1;" class="background img1"></div>
