--- a/html/index.html
+++ b/html/index.html
@@ -46,7 +46,7 @@
             <h2>Friday night - July 29th</h2>
             <div id="list">
             <ol>
-                <li style="list-style-type: '19:00';"><p>(Optional) Wine, cheese, appies and board games. Bring some of your own!</p></li>
+                <li style="list-style-type: '19:00';"><p>(Optional) Wine, cheese, appies and board games. Bring some of your own games!</p></li>
             </ol>
             </div>
             <h2>Saturday - July 30th</h2>
