--- a/html/index-fr.html
+++ b/html/index-fr.html
@@ -49,25 +49,31 @@
             <h2>Vendredi soir - 29 juillet</h2>
             <div id="list">
             <ol>
-                <li style="list-style-type: '19h00';"><p>(Facultatif) Soir&eacute;es jeux de soci&eacute;t&eacute;, vins, fromages et grignotines offerts. Apportez quelques-uns de vos jeux!</p></li>
+                <li style="list-style-type: '19h00';"><p>Soir&eacute;es jeux de soci&eacute;t&eacute;, souper style buffet offert. Apportez quelques-uns de vos jeux!</p></li>
+                <li style="list-style-type: '21h00';"><p>Un g&acirc;teau pour Dawson.</p></li>
             </ol>
             </div>
             <h2>Samedi - 30 juillet</h2>
             <div id="list">
             <ol>        
-                <li style="list-style-type: '10h00';"><p>Pr&eacute;parations pour la journ&eacute;e, allez et venez &agrave; votre guise. Jeux ext&eacute;rieur sur place, encore une fois vous pouvez ajouter vos propres jeux aux n&ocirc;tres!</p></li>
-                <li style="list-style-type: '15h30';"><p>S&eacute;ance photos.</p></li>
+                <li style="list-style-type: '10h00';"><p>Jeux ext&eacute;rieur et lunch sur place, arrivez &agrave; votre convenance.</p></li>
+                <li style="list-style-type: '14h00';"><p>S&eacute;ance photos pour les mari&eacute;s et leurs familles.</p></li>
                 <li style="list-style-type: '16h00';"><p>C&eacute;r&eacute;monie.</p></li>
-                <li style="list-style-type: '16h30';"><p>Ap&eacute;ro et souper, pr&eacute;par&eacute;s et servis par le Rustic Market Garden.</p></li>
-                <li style="list-style-type: '20h00';"><p>Danse et feu de camp.</p></li>
+                <li style="list-style-type: '16h30';"><p>Ap&eacute;ro, pr&eacute;par&eacute; et servi par le Rustic Market Garden.</p></li>
+                <li style="list-style-type: '17h30';"><p>Veuillez trouver votre si&egrave;ge.</p></li>
+                <li style="list-style-type: '17h45';"><p>Quelques mots de la part des mari&eacute;s.</p></li>
+                <li style="list-style-type: '18h00';"><p>Souper et dessert, pr&eacute;par&eacute;s et servis par le Rustic Market Garden.</p></li>
+                <li style="list-style-type: '20h00';"><p>Trivia.</p></li>
+                <li style="list-style-type: '21h00';"><p>Danse et feu de camp.</p></li>
                 <li style="list-style-type: '23h59';"><p>Souper de minuit!</p></li>
             </ol>
             </div>
             <h2>Dimanche - 31 juillet</h2>
             <div id="list">
             <ol>
-                <li style="list-style-type: '9h00';"><p>Brunch jusqu'&agrave; 12h00.</p></li>
-                <li style="list-style-type: '12h00';"><p>(Facultatif) Excursion pour voir des empreintes de dinosaures (situ&eacute; &agrave; 1h de route). De retour &agrave; Hudson's Hope pour 16h00.</p></li>
+                <li style="list-style-type: '9h00';"><p>Brunch et mimosas jusqu'&agrave; 12h00. M&eacute;nage de l'endroit et au revoirs &agrave; ceux qui doivent partir.</p></li>
+                <li style="list-style-type: '12h00';"><p>Excursion pour voir des empreintes de dinosaures (situ&eacute; &agrave; 1h de route).</p></li>
+                <li style="list-style-type: '16h00';"><p>De retour &agrave; Hudson's Hope pour 16h00 au plus tard (17h00 &agrave; Fort St John).</p></li>
             </ol>
             </div>
         </div>
