--- a/html/index.html
+++ b/html/index.html
@@ -46,25 +46,31 @@
             <h2>Friday night - July 29th</h2>
             <div id="list">
             <ol>
-                <li style="list-style-type: '19:00';"><p>(Optional) Wine, cheese, appies and board games. Bring some of your own games!</p></li>
+                <li style="list-style-type: '19:00';"><p>Event centre booked for evening, help-yourself supper provided for whenever you arrive. Board games, decorating, informal evening. </p></li>
+                <li style="list-style-type: '21:00';"><p>Dawson birthday bumps </p></li>
             </ol>
             </div>
             <h2>Saturday - July 30th</h2>
             <div id="list">
             <ol>        
-                <li style="list-style-type: '10:00';"><p>Casual preparations, come hang out at the venue at your convenience. There will be lawn games and snacks, again feel free to bring some games of your own!</p></li>
-                <li style="list-style-type: '15:30';"><p>Photos</p></li>
+                <li style="list-style-type: '10:00';"><p>Games and light sandwich lunch at venue, at your convenience</p></li>
+                <li style="list-style-type: '14:00';"><p>Photos for bride, groom and family</p></li>
                 <li style="list-style-type: '16:00';"><p>Wedding ceremony</p></li>
-                <li style="list-style-type: '16:30';"><p>Appies and dinner, catered by the Rustic Market Garden</p></li>
-                <li style="list-style-type: '20:00';"><p>Dance and campfire</p></li>
+                <li style="list-style-type: '16:30';"><p>Appies catered by the Rustic Market Garden and drinks</p></li>
+                <li style="list-style-type: '17:30';"><p>Please find your seats</p></li>
+                <li style="list-style-type: '17:45';"><p>Bride and groom address</p></li>
+                <li style="list-style-type: '18:00';"><p>Supper and dessert, catered by the Rustic Market Garden</p></li>
+                <li style="list-style-type: '20:00';"><p>Trivia</p></li>
+                <li style="list-style-type: '21:00';"><p>Campfire and dance</p></li>
                 <li style="list-style-type: '23:59';"><p>Midnight lunch!</p></li>
             </ol>
             </div>
             <h2>Sunday - July 31th</h2>
             <div id="list">
             <ol>
-                <li style="list-style-type: '9:00';"><p>Brunch and clean up until 12:00</p></li>
-                <li style="list-style-type: '12:00';"><p>(Optional) Drive to dinosaur tracks in the backcountry for those who have the time. Drive is approximately 1 hour. Back in Hudson's Hope around 16:00. </p></li>
+                <li style="list-style-type: '9:00';"><p>The newly minted bride and groom will serve up some breakfast and leftovers with mimosas to send you off in style. Venue clean up and goodbyes for those who have to leave.</p></li>
+                <li style="list-style-type: '12:00';"><p>Carpool to the backcountry (~1 hour drive) to find dinosaur tracks. Minimal walking (50 m) to site from the road. </p></li>
+                <li style="list-style-type: '16:00';"><p>Latest time we're back in Hudson's Hope (or at 17:00 in Fort St John)</p></li>
             </ol>
             </div>
         </div>
